config/kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-unclaimed-court-money-ingress
  namespace: find-unclaimed-court-money-staging
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: find-unclaimed-court-money-ingress-find-unclaimed-court-money-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
spec:
  tls:
  - hosts:
    - staging-find-unclaimed-court-money.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: staging-find-unclaimed-court-money.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: find-unclaimed-court-money-service
            port:
              number: 3000
